# bebop-qc

./: .gitignore  CHANGELOG.md  LICENSE  README.md  setup.cfg  setup.py
bebop/: __init__.py  bebop1.py  bebop1_equation.py  bebop1_params.py  cli.py  read_output.py  roothan.py  spatial_geom.py
bebop-qc/: CHANGELOG.md  LICENSE
bebop-qc/bebop1/: bebop1_equation.py  bebop1_params.py  cli.py  spatial_geom.py
bebop-qc/bebop2/: bebop2_equation.py
bebop1/: __init__.py  bebop1.py  read_output.py  roothan.py
bebop2/: __init__.py  bebop2.py  bebop2_equation.py  bebop2_params.py  cli.py  read_output.py  roothan.py  spatial_geom.py
bebop2/opt_parameters/Be~Be/: Be~Be_param_opt.json
bebop2/opt_parameters/Be~F/: Be~F_param_opt.json
bebop2/opt_parameters/Be~H/: Be~H_param_opt.json
bebop2/opt_parameters/Be~Li/: Be~Li_param_opt.json
bebop2/opt_parameters/B~B/: B~B_param_opt.json
bebop2/opt_parameters/B~Be/: B~Be_param_opt.json
bebop2/opt_parameters/B~H/: B~H_param_opt.json
bebop2/opt_parameters/C~B/: C~B_param_opt.json
bebop2/opt_parameters/C~Be/: C~Be_param_opt.json
bebop2/opt_parameters/C~C/: C~C_param_opt.json
bebop2/opt_parameters/C~Li/: C~Li_param_opt.json
bebop2/opt_parameters/F~F/: F~F_param_opt.json
bebop2/opt_parameters/H~F/: H~F_param_opt.json
bebop2/opt_parameters/H~H/: H~H_param_opt.json
bebop2/opt_parameters/Li~F/: Li~F_param_opt.json
bebop2/opt_parameters/Li~H/: Li~H_param_opt.json
bebop2/opt_parameters/N~Be/: N~Be_param_opt.json
examples/LiF/: bopout.json
examples/diisocyanate/: bopout.json
(+26 files in other folders)
