[metadata]
name = bebop
author = Barbaro Zulueta
author_email = blz11@pitt.edu
description = Bond-Energy/Bond-Order and Populations Relationship
url = https://github.com/keithgroup/bebop-qc
license = MIT license
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Chemistry

[options]
python_requires= >=3.7
